--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 
     <!--  Latest Portfolio-->   
     <section class="">
-      <div class="w-11/12 mx-auto py-[100px] ">
+      <div class="w-11/12 mx-auto pt-[100px] pb-10 ">
 
         <div class=" items-center pb-4 text-center">                    
           <button class=" text-base font-bold bg-lime-400/20 rounded-3xl px-4 py-2"><i class="fa-solid fa-arrow-right"></i> Explore our Latest works</button>         
@@ -359,12 +359,12 @@
 
 
     <!-- hero Section -->
-    <section class="w-11/12 mx-auto  bg-slate-100">
-      <div class=" px-32 py-20">
+    <section class="w-11/12 mx-auto bg-slate-100">
+      <div class=" p-12 ">
         <div
         class="hero min-h-screen"
         style="background-image: url(./assets/hero.jpg);">
-            <div class="hero-overlay bg-opacity-60"></div>
+            <div class="hero-overlay bg-opacity-40"></div>
             <div class="hero-content text-neutral-content text-center">
             <div class="max-w-md">
             <h1 class="mb-5 text-5xl font-bold">House Plan</h1>
